--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Deepfake Detection & Emotional Analysis</title>
-    <!-- Favicon can be added here -->
-    <!-- Tailwind CSS will be loaded via src/tailwind.css -->
+    <meta name="theme-color" content="#0f172a" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <title>AffectForensics</title>
   </head>
+
   <body class="bg-slate-900 text-slate-100 font-sans min-h-screen">
     <div id="root"></div>
 
